--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt": "^1.0.4",
     "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "load-grunt-tasks": "^4.0.0",
-    "pixrem": "^5.0.0"
+    "pixrem": "^5.0.0",
+    "precss": "^4.0.0"
   },
   "devDependencies": {
     "@csstools/postcss-sass": "^4.0.0",
