--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "cssnano": "^4.1.10",
     "grunt": "^1.0.4",
     "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
-    "load-grunt-tasks": "^4.0.0",
+    "jit-grunt": "^0.10.0",
     "pixrem": "^5.0.0",
-    "precss": "^4.0.0"
+    "postcss-scss": "^2.0.0"
   },
   "devDependencies": {
     "@csstools/postcss-sass": "^4.0.0",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-htmlmin": "^3.0.0",
     "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-postcss": "^0.9.0"
+    "grunt-postcss": "^0.9.0",
+    "grunt-svgmin": "^6.0.0",
+    "grunt-svgstore": "^2.0.0"
   }
 }
